--- a/src/content/projects/smpearth/index.mdx
+++ b/src/content/projects/smpearth/index.mdx
@@ -252,7 +252,7 @@ Between the state of the community and the internal issues with the server, I qu
 
 While it was objectively a hell of my own creation, to this day I still feel that it would've been unsustainable for anyone who somehow found themselves in a similar situation at that age.
 
-As the workload only increased, I quickly burned out and neglected my duties less and less. Instead of doing the smart thing by downloading the server files and high-tailing it to a new server host, I pussyfooted around the issue out of fear of upsetting the hosting company and the creators relying on the server to put food on the table (exact quote of what I was told).
+As the workload only increased, I quickly burned out and neglected my duties more and more. Instead of doing the smart thing by downloading the server files and high-tailing it to a new server host, I pussyfooted around the issue out of fear of upsetting the hosting company and the creators relying on the server to put food on the table (exact quote of what I was told).
 
 Meanwhile, the situation with the stan community escallated to the point that a few creators on SMP Earth asked me to setup a Twitter blocklist that would esentially put an embargo on the entire stan community (since they were clearly incapable of policing themselves). I quickly jumped into action and announced the blocklist in a now-deleted tweet. Although I can't defend the unprofessionalism of my teenage self up until this point, what happened next is genuinely still outrageous to me to this very day.
 
