--- a/src/content/projects/smpearth/index.mdx
+++ b/src/content/projects/smpearth/index.mdx
@@ -42,13 +42,15 @@ Also, I just really wanted to play Minecraft with my friends.
 
 ![The tweet that started SMPEarth](./origin-of-smpearth.webp)
 
-## Foreword
+## Seethe Warning
 
-This article is largely an accumulation of a few personal writings about the project that I've collected over the years.
+This article is an accumulation of personal writings about the project that I've collected over the years. Some of it is very dated and all of it is very opinionated.
 
-Although I originally planned on editing it down for clarity and accuracy, I've decided to leave it as is for the sake of preserving the opinionated nature of the original as it once existed.
+Although I originally planned on editing it down for clarity and accuracy, I've decided to leave it as is for the sake of preservation, or whatever.
 
-The rest of this page's content is best interpreted as a personal diary entry than a definitive overview of the history of the project's development.
+The rest of this page's content is best interpreted as a personal diary entry rather than a definitive overview of the project's development history.
+
+At the very least, it's an accurate window into my mind from when I was still seething over the whole situation.
 
 ## Let there be Earth
 
