--- a/src/content/projects/smpearth/index.mdx
+++ b/src/content/projects/smpearth/index.mdx
@@ -225,9 +225,9 @@ Personally, I thought they were antisocial, harmful, and, worst of all, annoying
 - Stans were professional victims who felt zero shame in leveraging their identity (mental health, sexuality, gender, race, age, etc.) to harass creators who didn't meet their impossibly high standards (essentially, allowing stans to be use them like playthings as they saw fit).
 - The stan community was (and still is) overall a very strange group of people who truly believed they were entitled to dehumanize real people for their own entertainment at their own discretion.
 
-![Screenshot of me antagonizing teenage girls in 2019](./chippledipple-kpoomer.webp)
+![Screenshot of me antagonizing people in 2019](./chippledipple-kpoomer.webp)
 
-_Screenshot of me antagonizing teenage girls in 2019. Old habits die hard, I guess._
+_Screenshot of me antagonizing people in 2019. Old habits die hard, I guess._
 
 I felt justified in my repeated tirades against the stan community, as they were the ones making other creators question if it was even worth continuing to make Minecraft content anymore. I, and many others involved in the community, were under the genuine belief that the stan community was a very small subculture that could be easily marginalized and snuffed out. There was an earnest opposition to the stan community from a good chunk of the Minecraft YouTuber community. Nobody knew what was to come.
 
@@ -249,7 +249,7 @@ Between the state of the community and the internal issues with the server, I qu
 
 - I was paying to work a full-time job...
 - ... that was making me flunk out of high school
-- ... to entertain a community of insane teenage girls
+- ... to entertain a community of insane people
 - ... just so I could play Minecraft with my friends
 
 While it was objectively a hell of my own creation, to this day I still feel that it would've been unsustainable for anyone who somehow found themselves in a similar situation at that age.
