--- a/src/content/projects/dotfiles/index.mdx
+++ b/src/content/projects/dotfiles/index.mdx
@@ -6,6 +6,11 @@ repoURL: 'https://github.com/fractalcounty/dotfiles'
 showInBlog: false
 blogTitle: 'Dotfiles'
 type: 'project'
+tags:
+  - dotfiles
+  - macOS
+  - fish-shell
+  - ghostty
 ---
 
 ![Dotfiles Preview](./chips-dotfiles-preview.webp)
