--- a/src/content/projects/smpearth/index.mdx
+++ b/src/content/projects/smpearth/index.mdx
@@ -10,6 +10,13 @@ projectURLs:
 showInBlog: true
 blogTitle: 'The Genesis of SMPEarth'
 type: 'project'
+tags:
+  - minecraft
+  - smpearth
+  - smplive
+  - intcraft
+  - dreamsmp
+  - dream
 ---
 
 import { YouTube } from 'astro-embed';
