added formatting components

--- a/src/content/blog/godot/index.mdx
+++ b/src/content/blog/godot/index.mdx
@@ -1,11 +1,22 @@
 ---
-title: "When game engines go woke"
-description: "Various thoughts on the Godot game engine and its recent controversies."
-date: "Oct 3 2024"
+title: 'When game engines go woke'
+description: 'Various thoughts on the Godot game engine and its recent controversies.'
+date: 'Oct 3 2024'
+type: 'blog'
+thumbnail: 'godot'
+draft: true
+tags:
+  - godot
+  - game-development
+  - gamedev
+  - wokot
+  - redot
+  - controversy
+  - social-media
 ---
 
 ![Godot editor](./godot-editor.webp)
-*A screenshot from a game I abandonded in 2023*
+_A screenshot from a game I abandonded in 2023_
 
 import { Tweet } from 'astro-embed';
 
@@ -28,15 +39,15 @@ While this post is going to sound very critical towards Godot, its community, an
 
 It all started with this banger tweet from the official Godot Twitter account:
 
-<Tweet id="https://x.com/godotengine/status/1839656658932306395" />
+<Tweet id='https://x.com/godotengine/status/1839656658932306395' />
 
-Opinions on this tweet were polarizing at best and ranged from "the cancer killing the engine" to "the funniest thing since boykisser" with little inbetween. Most Godot users fell into the latter category.  Personally, I found it sort of funny, but maybe in an eye-rolling sort of way. Not everyone felt the same way, however.
+Opinions on this tweet were polarizing at best and ranged from "the cancer killing the engine" to "the funniest thing since boykisser" with little inbetween. Most Godot users fell into the latter category. Personally, I found it sort of funny, but maybe in an eye-rolling sort of way. Not everyone felt the same way, however.
 
 ### The First Plane Hits
 
 Apparently, it was so noxious to that [Grummz](https://x.com/Grummz), a literal who grifter with a full-time job complaining about "localizers" and other [Shit Nobody Cares About](https://wiki.soyjak.st/Shit_Nobody_Cares_About), saw it as the perfect opportunity to revive his dream of Gamergate 2 despite having no idea what Godot was 5 seconds earlier:
 
-<Tweet id="https://x.com/Grummz/status/1840398940241604648" />
+<Tweet id='https://x.com/Grummz/status/1840398940241604648' />
 
 Before anyone could even react, more trouble was brewing.
 
@@ -44,11 +55,11 @@ Before anyone could even react, more trouble was brewing.
 
 In this case, the plane was the [N word](https://en.wikipedia.org/wiki/Nigger) and the pilot was a former moderator of what used to be the official Godot Discord server:
 
-<Tweet id="https://x.com/GamesNosh/status/1840499469160190381"/>
+<Tweet id='https://x.com/GamesNosh/status/1840499469160190381' />
 
 Once every game developer on Twitter had already moved on and went back to making games, the Godot Foundation made an official statement for everyone else:
 
-<Tweet id="https://x.com/godotfoundation/status/1840721449364988300"/>
+<Tweet id='https://x.com/godotfoundation/status/1840721449364988300' />
 
 To paraphrase the statement:
 
@@ -62,7 +73,7 @@ To paraphrase the statement:
 Now, when you search `godot controversy` on Google, you'll mostly find articles focusing on the Foundation's response to the N word stuff instead of the actual incident. Oh, and whatever this is, I guess:
 
 ![Awesome Godot logo](./godot-cool.webp)
-*Even child molesters are joining in on the kerfuffle!*
+_Even child molesters are joining in on the kerfuffle!_
 
 ### The Fork
 
@@ -116,7 +127,7 @@ Explain why why the status quo is not ideal or sustainable:
 #### Twitter
 
 - People fail to understand is the risk involved in representing your entire project and community on Post-Musk Twitter.
-- The "wokot" situation is proof that at any given moment, there is a horde of grifters at your doorstep eager to launch an all-out attack on you the *second* you fumble.
+- The "wokot" situation is proof that at any given moment, there is a horde of grifters at your doorstep eager to launch an all-out attack on you the _second_ you fumble.
 - Before you know it, they've turned your project into the active battleground of their lame culture war and dragged your userbase into an obnoxious (and often dangerous) culture war.
 - Regardless of the fact that these people are, objectively, acting in bad faith, **any** amount of perceived "drama" and instability surrounding a project will still reflect poorly on it in the eyes of uninformed outsiders.
 - Posting on Twitter is simply not worth it.
@@ -125,12 +136,12 @@ Explain why why the status quo is not ideal or sustainable:
 
 > The supreme art of war is to subdue the enemy without fighting."
 >
-> Sun Tzu, "*The Art of War*
+> Sun Tzu, "_The Art of War_
 
 - while the godot foundation's periodic reminders that they don't hate 80% of its userbase's guts is a nice sentiment, godot needs to be more tactful
 - the wokot tweet wasn't an example of godot valiantly fighting on the forefront of a liberation movement, it was a quick and easy way to generate trust and engagement in their project by validating a significant portion of the userbase
 - godot goes out of their way to talk about political issues even if they have nothing of substance to say
-- and yes, like it or not, human rights *are* inherently a political issue
+- and yes, like it or not, human rights _are_ inherently a political issue
 
 ---
 
@@ -152,4 +163,4 @@ What should Godot do?
 3. Reduced risk of project fragmentation
 
 ![Who wrote this?](./godot-wtf-docs.webp)
-*This one is honestly really funny if you imagine the author decided to pull off an ironic Joker bit in the middle of a serious engine document for no reason*
+_This one is honestly really funny if you imagine the author decided to pull off an ironic Joker bit in the middle of a serious engine document for no reason_
