--- a/src/content/projects/smpearth/index.mdx
+++ b/src/content/projects/smpearth/index.mdx
@@ -93,11 +93,12 @@ Fortunately, I was suprised to hear that some of the members of _Funny Club_ had
 Like many others throughout this story, I was unable to resist the forbidden fruit.
 
 <Tweet
-  source='/src/content/projects/smpearth/origin-of-smpearth.webp'
+  source='/archive/smpearth-origin-tweet.webp'
   text='Idea: a live streaming event like SMP Live expect the map is a 1:2000 scale map of the world and players compete within nations and cities via towny/factions. Imagine the memes, wars, and geopolitical insanity'
   likes='1,184'
   replies='213'
   retweets='124'
+  imageUrl='/src/content/projects/smpearth/smpearth-map.webp'
 />
 
 ## Let there be light
@@ -111,7 +112,7 @@ Eventually, [Wilbur Soot](https://en.wikipedia.org/wiki/Wilbur_Soot) got on boar
 **10/5/2024 Edit:** Unfortunately, like most projects involving a massive group of content creators, SMPEarth's history is also marred by controversy involving many of the original members. Perhaps one of the best examples is [Wilbur Soot](https://en.wikipedia.org/wiki/Wilbur_Soot), who is currently in the midst of some [pretty harrowing allegations](https://www.themirror.com/entertainment/celebrity-news/wilbur-soot-apology-shubble-allegations-362564). I had about as good of an experience that a teenager can have with a content creator over the internet, so I have nothing to report or any insight to offer on that one. For our story's sake, he was the person who essentially sponsored SMPEarth by getting the bulk of creators from SMPLive in on the project.
 
 <Tweet
-  source='/src/content/projects/smpearth/smpearth-wilbur-tweet.webp'
+  source='/archive/smpearth-wilbur-tweet.webp'
   pfp='/src/content/projects/smpearth/wilbur-pfp.webp'
   text="I'm setting up a big Minecraft server with lots of streamers all set on a 1:2000 
   Earth map. Still a while to go but here is where some of the streamers have said they
@@ -133,7 +134,11 @@ I also pivoted my attention towards the project's marketing and branding, opting
 
 ## The Garden of Eden
 
-<YouTube id='yyezbVbQeHY' />
+<YouTube
+  id='yyezbVbQeHY'
+  title='SMPEarth Official Trailer'
+  playlabel='Play the SMPEarth trailer'
+/>
 
 Up until this point, I had been hosting the development environment for SMPEarth on my own computer. For the purposes of testing amongst a few friends, it worked just as good as even the priciest dedicated server since Minecraft's infamously single-threaded design bottlenecked even on my consumer-grade CPU.
 
@@ -173,7 +178,7 @@ I'll just say that I didn't get what I paid for.
 
 Here's a transcription of a conversation between me and Wilbur Soot shortly after the server launched:
 
-<DiscordConversation>
+<DiscordConversation archive='/archive/smpearth-chip-wilbur-msg.png'>
   <DiscordMessage
     author='chip'
     date='12/11/2019 10:59 PM'
@@ -182,6 +187,7 @@ Here's a transcription of a conversation between me and Wilbur Soot shortly afte
       "I know you're busy, so don't feel obligated to respond, but I feel like you may want to know that the server has been having connectivity issues for about a week. AbsoluteMC has known about the issue and claimed they were working on it, and when I checked in on them today they tried telling me that I never brought the problem up. not only that, they are just a reseller of another company's servers. I confirmed that the connectivity issues are being caused by AbsoluteMC, NOT the company they rent servers from.",
     ]}
     avatar='/src/content/projects/smpearth/chip-pfp.webp'
+    messageId='1'
   />
 
 {' '}
@@ -193,6 +199,7 @@ Here's a transcription of a conversation between me and Wilbur Soot shortly afte
     "Thanks. Tomorrow you'll have a new team. Tell me who's good and who's bad and I'll make sure you can have the perfect set.",
   ]}
   avatar='/src/content/projects/smpearth/wilbur-pfp.webp'
+  messageId='2'
 />
 
 </DiscordConversation>
@@ -227,18 +234,21 @@ At one time, I genuinely believed that he was a false identity created to astrot
 - Other than being Welsh or something, he gave incredibly inconsistent and contradictory information about his identity, at times suggesting that he was _younger than I was_ (especially concerning on top of the previous point)
 
 <Tweet
-  source='/src/content/projects/smpearth/smpearth-josha20-sus.webp'
+  source='/archive/smpearth-josh-sus.webp'
   pfp='/src/content/projects/smpearth/josha20-pfp.webp'
-  text="🖕 xmc/draxxis - they said it! ha! 1st customer. 
-  
-  RT @AbsoluteMC - Happy Birthday from the entire AMC team to @JoshA20_! 🎉
-  Our first ever customer, the man who helped AbsoMC rise off the ground
-  and into the wide world who's now a part of..."
+  text='🖕 xmc/draxxis - they said it! ha! 1st customer.'
   name='Josh'
   handle='JoshA20_'
   likes='34'
   replies='3'
   retweets='0'
+  quotedTweet={{
+    name: 'AbsoluteMC.io',
+    handle: 'AbsoluteMC',
+    text: "Happy Birthday from the entire AMC team to @JoshA20_! 🎉 Our first ever customer,\
+    the man who helped AbsoMC rise off the ground and into the wide world who's now a part of...",
+    pfp: '/src/content/projects/smpearth/absolutemc-logo.webp',
+  }}
 />
 
 Due to the nature of the "sponsorship" and mounting pressure from Minecraft YouTubers that I used to practically pray to every night, I took total responsibility for the issues and spent every waking hour of my life keeping the server held together with what little Adderall I had. It even got so out of control that I was flunking out of high school for a project I was _paying_ to maintain.
@@ -283,7 +293,7 @@ Unfortunately, this was probably the biggest mistake I made that singlehandedly 
 My lapse in judgement opened the door for JoshA20 (and arguably AbsoluteMC depending on who you ask) to slip monetization efforts into SMPEarth. The most notable examples are the merch store and the public server.
 
 <Tweet
-  source='/src/content/projects/smpearth/smpearth-merch-claim.webp'
+  source='/archive/smpearth-merch-claim.webp'
   pfp='/src/content/projects/smpearth/smpearth-logo.webp'
   text="ABOUT THE MERCH: All leftover profits from SMP Earth merch go 
   towards for server costs, and any extra will be given to a charity
@@ -382,7 +392,7 @@ Don't get me wrong, JoshA20 was absolutely doing _something_. He was arguably mo
 
 I just don't think he was in it for the right reasons.
 
-<DiscordConversation archive="/src/content/projects/smpearth/smpearth-chatlogs.webp">
+<DiscordConversation archive="/archive/smpearth-funny-club-chatlogs.webp">
 <DiscordMessage
   author='Deleted User'
   date='04/04/2020 2:16 PM'
@@ -390,6 +400,7 @@ I just don't think he was in it for the right reasons.
     "He shifted blame on other people and falsely accused of things he was at fault for most of which chip has screenshots to counterpoint",
   ]}
   avatar='/src/content/projects/smpearth/discord-pfp.webp'
+  messageId='1'
 />
 <DiscordMessage
   date='04/04/2020 2:16 PM'
@@ -398,6 +409,7 @@ I just don't think he was in it for the right reasons.
     'yeah he tries to pass the blame for not being able to run the server over to chip despite him saying he could handle it',
   ]}
   avatar='/src/content/projects/smpearth/brody-pfp.webp'
+  messageId='2'
 />
 <DiscordMessage
   author='Deleted User'
@@ -406,6 +418,7 @@ I just don't think he was in it for the right reasons.
     "Techno lost his items due to a connection issue which chip at the time was refunding but when it was only josh online he told techno he wouldn't get his stuff back unless he followed him on Twitter",
   ]}
   avatar='/src/content/projects/smpearth/discord-pfp.webp'
+  messageId='3'
 />
 
 {' '}
@@ -436,10 +449,15 @@ Personally, I thought they were antisocial, harmful, and, worst of all, annoying
 - Stans were professional victims who felt zero shame in leveraging their identity (mental health, sexuality, gender, race, age, etc.) to harass creators who didn't meet their impossibly high standards (essentially, allowing stans to be use them like playthings as they saw fit).
 - The stan community was (and still is) overall a very strange group of people who truly believed they were entitled to dehumanize real people for their own entertainment at their own discretion.
 
-<ImageCard
-  imagePath='/src/content/projects/smpearth/chippledipple-kpoomer.webp'
-  altText='Screenshot of me antagonizing people in 2019. Old habits die hard, I guess.'
-  name='SMPEarth'
+<Tweet
+  source='/archive/smpearth-chippledipple-kpoomer.webp'
+  pfp='/src/content/projects/smpearth/chip-pfp.webp'
+  imageUrl='/src/content/projects/smpearth/smpearth-fractalcounty-kpoomer.webp'
+  name='chip'
+  handle='chippledipple'
+  likes='1,211'
+  replies='42'
+  retweets='105'
 />
 
 I felt justified in my repeated tirades against the stan community, as they were the ones making other creators question if it was even worth continuing to make Minecraft content anymore. I, and many others involved in the community, were under the genuine belief that the stan community was a very small subculture that could be easily marginalized and snuffed out. There was an earnest opposition to the stan community from a good chunk of the Minecraft YouTuber community. Nobody knew what was to come.
@@ -474,7 +492,7 @@ Meanwhile, the situation with the stan community escallated to the point that a 
 ## Paradise Lost
 
 <Tweet
-  source='/src/content/projects/smpearth/smpearth-announcement.webp'
+  source='/archive/smpearth-announcement.webp'
   pfp='/src/content/projects/smpearth/smpearth-logo.webp'
   text='Public Announcement: We do not condemn nor support the actions of an ex-staff member
   threatening to dox/attack 1,000+ users because of their status on blocking him. This staff
@@ -500,7 +518,7 @@ Beyond that, there's really not much else to it. It was over before it even bega
 
 It took awhile for any real resentment to build up, but what really kickstarted it was how the project was handled after my sudden dismissal.
 
-<DiscordConversation archive='/src/content/projects/smpearth/smpearth-josh-message-2.webp'>
+<DiscordConversation archive='/archive/smpearth-josh-message-2.webp'>
   <DiscordMessage
     author='Josh_'
     date='06/06/2020'
@@ -509,12 +527,13 @@ It took awhile for any real resentment to build up, but what really kickstarted 
       'grunk',
     ]}
     avatar='/src/content/projects/smpearth/josha20-pfp.webp'
+    messageId='1'
   />
 </DiscordConversation>
 
 Within hours of my dismissal, his public opinion towards me did a complete 180.
 
-<DiscordConversation archive='/src/content/projects/smpearth/smpearth-josh-message-5.webp'>
+<DiscordConversation archive='/archive/smpearth-josh-message-5.webp'>
   <DiscordMessage
     author='Josh_'
     date='06/06/2020'
@@ -523,12 +542,13 @@ Within hours of my dismissal, his public opinion towards me did a complete 180.
       'he got all the credit, but actually done fuckall',
     ]}
     avatar='/src/content/projects/smpearth/josha20-pfp.webp'
+    messageId='1'
   />
 </DiscordConversation>
 
 And without the ability to defend myself, he started setting a new narrative.
 
-<DiscordConversation archive='/src/content/projects/smpearth/smpearth-josh-message-3.webp'>
+<DiscordConversation archive='/archive/smpearth-josh-message-3.webp'>
   <DiscordMessage
     author='Josh_'
     date='06/06/2020'
@@ -562,6 +582,7 @@ And without the ability to defend myself, he started setting a new narrative.
       'thats genuinely it',
     ]}
     avatar='/src/content/projects/smpearth/josha20-pfp.webp'
+    messageId='1'
   />
 </DiscordConversation>
 
@@ -576,7 +597,7 @@ Oh, wait, nevermind.
 
 A lot of the original founding members of SMPEarth weren't happy with the way things were going, either.
 
-<DiscordConversation archive='/src/content/projects/smpearth/smpearth-grilling-josh.webp'>
+<DiscordConversation archive='/archive/smpearth-grilling-josh.webp'>
   <DiscordMessage
     author='Grunk'
     date='Today at 10:20 PM'
@@ -585,6 +606,7 @@ A lot of the original founding members of SMPEarth weren't happy with the way th
       'and everyone else said you could too',
     ]}
     avatar='/src/content/projects/smpearth/grunk-pfp.webp'
+    messageId='1'
   />
   <DiscordMessage
     author='JoshA20'
@@ -595,18 +617,21 @@ A lot of the original founding members of SMPEarth weren't happy with the way th
       'create drama all you want',
     ]}
     avatar='/src/content/projects/smpearth/josha20-pfp.webp'
+    messageId='2'
   />
   <DiscordMessage
     author='Grunk'
     date='Today at 10:21 PM'
     content={['so ur admitting that ur incompetent']}
     avatar='/src/content/projects/smpearth/grunk-pfp.webp'
+    messageId='3'
   />
   <DiscordMessage
     author='JoshA20'
     date='Today at 10:22 PM'
     content={['Yeah, unfortunately', "I don't know left from right"]}
     avatar='/src/content/projects/smpearth/josha20-pfp.webp'
+    messageId='4'
   />
   <DiscordMessage
     author='Grunk'
@@ -616,12 +641,13 @@ A lot of the original founding members of SMPEarth weren't happy with the way th
       'if u know u couldnt run the server why did u say u could',
     ]}
     avatar='/src/content/projects/smpearth/grunk-pfp.webp'
+    messageId='5'
   />
 </DiscordConversation>
 
 After taking the entire server hostage and killing any momentum the Olympics finale had left, he then had the audacity to plead with creators to keep playing on it.
 
-<DiscordConversation archive='/src/content/projects/smpearth/smpearth-josh-pleading.webp'>
+<DiscordConversation archive='/archive/smpearth-josh-pleading.webp'>
   <DiscordMessage
     author='Josh'
     date='10:11 PM'
@@ -636,6 +662,7 @@ After taking the entire server hostage and killing any momentum the Olympics fin
       "at this point i'm begging.",
     ]}
     avatar='/src/content/projects/smpearth/josha20-pfp.webp'
+    messageId='1'
   />
 </DiscordConversation>
 
@@ -644,7 +671,7 @@ Worst of all: JoshA20 then proceeded to take credit for the _Trevor Project_ cha
 Unfortunately, the original messages have been lost to the sands of time. But there's this screenshot I saved at the time:
 
 <Tweet
-  source='/src/content/projects/smpearth/smpearth-attempt.webp'
+  source='/archive/smpearth-attempt.webp'
   pfp='/src/content/projects/smpearth/smpearth-logo.webp'
   text='We will be attempting to raise money
   for The Trevor Project, an LGBTQ+
