--- a/src/content/projects/dotfiles/index.mdx
+++ b/src/content/projects/dotfiles/index.mdx
@@ -39,10 +39,10 @@ Before I settled on a manual approach, I tried several different dotfile manager
 
 Shell scripts and git.
 
-<video width='100%' controls>
+<video width="100%" controls>
   <source
-    src='https://github.com/user-attachments/assets/349cf1be-8d9a-4163-8b42-4dd68460c806'
-    type='video/webm'
+    src="https://github.com/user-attachments/assets/349cf1be-8d9a-4163-8b42-4dd68460c806"
+    type="video/webm"
   />
   Your browser does not support the video tag.
 </video>
@@ -82,4 +82,4 @@ For a full, always-updated list of programs I use, check out the [Brewfile](http
 
 ### Setup, usage, and technical info
 
-If you want to see how it all works under the hood, or are brave enough to adapt it to your own needs, you can check out the [github repo](https://github.com/fractalcounty/dotfiles) yourself.
+If you want to see how it all works under the hood, or are brave enough to adapt it to your own needs, you can check out the [github repo yourself](https://github.com/fractalcounty/dotfiles).
