fixed extension case

--- a/src/content/artwork/chip-oc-2021/index.mdx
+++ b/src/content/artwork/chip-oc-2021/index.mdx
@@ -3,6 +3,6 @@ title: "chip character 2021"
 description: "chip 2021 character art"
 date: "2021-02-04"
 type: "art"
-images: ["./chip-oc-2021-1.JPEG", "./chip-oc-2021-2.JPEG", "./chip-oc-2021-3.JPEG", "./chip-oc-2021-4.JPEG"]
+images: ["./chip-oc-2021-1.jpeg", "./chip-oc-2021-2.jpeg", "./chip-oc-2021-3.jpeg", "./chip-oc-2021-4.jpeg"]
 ---
 
