--- a/src/content/artwork/chip-oc-2022/index.mdx
+++ b/src/content/artwork/chip-oc-2022/index.mdx
@@ -3,6 +3,6 @@ title: "chip character 2022"
 description: "chip character art 2022"
 date: "2022-02-27"
 type: "art"
-images: ["./chip-oc-2022-1.JPEG", "./chip-oc-2022-2.JPEG", "./chip-oc-2022-3.JPEG"]
+images: ["./chip-oc-2022-1.jpeg", "./chip-oc-2022-2.jpeg", "./chip-oc-2022-3.jpeg"]
 ---
 
