--- a/src/content/artwork/chowder-shit/index.mdx
+++ b/src/content/artwork/chowder-shit/index.mdx
@@ -3,6 +3,6 @@ title: "chowder shit"
 description: "scrapped chowder animation art"
 date: "2021-10-28"
 type: "art"
-images: ["./chowder-1.JPEG", "./chowder-2.JPEG", "./chowder-3.JPEG", "./chowder-4.JPEG"]
+images: ["./chowder-1.jpeg", "./chowder-2.jpeg", "./chowder-3.jpeg", "./chowder-4.jpeg"]
 ---
 
