--- a/src/content/artwork/epic-gamer-comic/index.mdx
+++ b/src/content/artwork/epic-gamer-comic/index.mdx
@@ -3,5 +3,5 @@ title: "epic gamer comic"
 description: "my keeby10 epic gamer comic entry"
 date: "2023-01-10"
 type: "webcomic"
-images: ["./epic-gamer-comic.JPEG"]
+images: ["./epic-gamer-comic.jpeg"]
 ---
