--- a/src/content/artwork/exeter/index.mdx
+++ b/src/content/artwork/exeter/index.mdx
@@ -3,6 +3,6 @@ title: "exeter"
 description: "pyramid country fanart"
 date: "2022-04-06"
 type: "art"
-images: ["./exeter-1.JPEG", "./exeter-2.JPEG", "./exeter-doodle.JPEG"]
+images: ["./exeter-1.jpeg", "./exeter-2.jpeg", "./exeter-doodle.jpeg"]
 ---
 
