--- a/src/content/artwork/highway-view/index.mdx
+++ b/src/content/artwork/highway-view/index.mdx
@@ -3,6 +3,6 @@ title: "highway view"
 description: "colorado landscape"
 date: "2022-09-22"
 type: "art"
-images: ["./highway-view.JPEG"]
+images: ["./highway-view.jpeg"]
 ---
 
