--- a/src/content/artwork/home-mv-bg/index.mdx
+++ b/src/content/artwork/home-mv-bg/index.mdx
@@ -3,5 +3,5 @@ title: "HOME backgrounds"
 description: "background art for HOME music video"
 date: "2022-05-07"
 type: "art"
-images: ["./home-mv-bg-1.JPEG"]
+images: ["./home-mv-bg-1.jpeg"]
 ---
