--- a/src/content/artwork/home-mv-doodles/index.mdx
+++ b/src/content/artwork/home-mv-doodles/index.mdx
@@ -3,5 +3,5 @@ title: "home MV doodles"
 description: "doodles for HOME music video"
 date: "2023-11-02"
 type: "art"
-images: ["./home-mv-doodle-1.JPEG", "./home-mv-doodle-2.JPEG", "./home-mv-doodle-3.JPEG", "./home-mv-doodle-4.JPEG", "./home-mv-doodle-5.JPEG", "./home-mv-doodle-6.JPEG"]
+images: ["./home-mv-doodle-1.jpeg", "./home-mv-doodle-2.jpeg", "./home-mv-doodle-3.jpeg", "./home-mv-doodle-4.jpeg", "./home-mv-doodle-5.jpeg", "./home-mv-doodle-6.jpeg"]
 ---
