--- a/src/content/artwork/laramie-online-doodles/index.mdx
+++ b/src/content/artwork/laramie-online-doodles/index.mdx
@@ -3,5 +3,5 @@ title: "laramie online doodles"
 description: "doodles for laramie online"
 date: "2020-12-03"
 type: "art"
-images: ["./laramie-online-doodle-1.JPEG", "./laramie-online-doodle-2.JPEG", "./laramie-online-doodle-3.JPEG", "./laramie-online-doodle-4.JPEG", "./laramie-online-doodle-5.JPEG"]
+images: ["./laramie-online-doodle-1.jpeg", "./laramie-online-doodle-2.jpeg", "./laramie-online-doodle-3.jpeg", "./laramie-online-doodle-4.jpeg", "./laramie-online-doodle-5.jpeg"]
 ---
