--- a/src/content/artwork/pipca-concepts/index.mdx
+++ b/src/content/artwork/pipca-concepts/index.mdx
@@ -3,6 +3,6 @@ title: "pipca game concepts"
 description: "pipca game concept art"
 date: "2023-05-03"
 type: "art"
-images: ["./pipca-concept-2.JPEG", "./pipca-concept-3.JPEG"]
+images: ["./pipca-concept-2.jpeg", "./pipca-concept-3.jpeg"]
 ---
 
