--- a/src/content/artwork/relatable-artist-comic/index.mdx
+++ b/src/content/artwork/relatable-artist-comic/index.mdx
@@ -3,5 +3,5 @@ title: "relatable artist comic"
 description: "Artists RULE!"
 date: "2020-04-09"
 type: "webcomic"
-images: ["./relatable-artist-comic-1.JPEG", "./relatable-artist-comic-2.JPEG"]
+images: ["./relatable-artist-comic-1.jpeg", "./relatable-artist-comic-2.jpeg"]
 ---
