--- a/src/content/artwork/stann-co/index.mdx
+++ b/src/content/artwork/stann-co/index.mdx
@@ -3,5 +3,5 @@ title: "stann co"
 description: "stann co"
 date: "2024-05-01"
 type: "art"
-images: ["./stann-co.JPEG"]
+images: ["./stann-co.jpeg"]
 ---
