--- a/src/content/artwork/stateside-crt/index.mdx
+++ b/src/content/artwork/stateside-crt/index.mdx
@@ -3,6 +3,6 @@ title: "stateside crt experiments"
 description: "fun with crts"
 date: "2022-03-20"
 type: "art"
-images: ["./stateside-crt-1.JPEG", "./stateside-crt-2.JPEG"]
+images: ["./stateside-crt-1.jpeg", "./stateside-crt-2.jpeg"]
 ---
 
