--- a/src/content/artwork/war-years/index.mdx
+++ b/src/content/artwork/war-years/index.mdx
@@ -3,5 +3,5 @@ title: "WAR YEARS"
 description: "album cover for demos"
 date: "2024-10-02"
 type: "art"
-images: ["./war-years.JPEG"]
+images: ["./war-years.jpeg"]
 ---
