--- a/src/content/artwork/chip-oc-2019/index.mdx
+++ b/src/content/artwork/chip-oc-2019/index.mdx
@@ -3,6 +3,6 @@ title: "chip character 2019"
 description: "chip 2019 character art"
 date: "2019-02-04"
 type: "art"
-images: ["./chip-oc-2019-1.JPEG", "./chip-oc-2019-2.JPEG"]
+images: ["./chip-oc-2019-1.jpeg", "./chip-oc-2019-2.jpeg"]
 ---
 
