--- a/src/content/artwork/chip-oc-2023/index.mdx
+++ b/src/content/artwork/chip-oc-2023/index.mdx
@@ -3,6 +3,6 @@ title: "chip character 2023"
 description: "chip character art 2023"
 date: "2023-02-27"
 type: "art"
-images: ["./chip-oc-2023-3.JPEG", "./chip-oc-2023-1.JPEG", "./chip-oc-2023-2.JPEG", "./chip-oc-2023-4.JPEG", "./chip-oc-2023-5.JPEG", "./chip-oc-2023-6.JPEG", "./chip-oc-2023-7.JPEG"]
+images: ["./chip-oc-2023-3.jpeg", "./chip-oc-2023-1.jpeg", "./chip-oc-2023-2.jpeg", "./chip-oc-2023-4.jpeg", "./chip-oc-2023-5.jpeg", "./chip-oc-2023-6.jpeg", "./chip-oc-2023-7.jpeg"]
 ---
 
