--- a/src/content/artwork/dr-rotten/index.mdx
+++ b/src/content/artwork/dr-rotten/index.mdx
@@ -3,6 +3,6 @@ title: "dr rotten"
 description: "its literally the guy from dr underpants"
 date: "2022-02-04"
 type: "art"
-images: ["./dr-rotten-1.JPEG", "./dr-rotten-2.JPEG", "./dr-rotten-3.JPEG"]
+images: ["./dr-rotten-1.jpeg", "./dr-rotten-2.jpeg", "./dr-rotten-3.jpeg"]
 ---
 
