--- a/src/content/artwork/pipca-shitposts/index.mdx
+++ b/src/content/artwork/pipca-shitposts/index.mdx
@@ -3,6 +3,6 @@ title: "pipca shitposts"
 description: "pipca shitpost art"
 date: "2023-05-01"
 type: "art"
-images: ["./pipca-shitpost-1.JPEG", "./pipca-shitpost-2.JPEG", "./pipca-shitpost-3.JPEG"]
+images: ["./pipca-shitpost-1.jpeg", "./pipca-shitpost-2.jpeg", "./pipca-shitpost-3.jpeg"]
 ---
 
