fix: normalize image extensions to lowercase

--- a/src/content/artwork/home-mv-renders/index.mdx
+++ b/src/content/artwork/home-mv-renders/index.mdx
@@ -3,5 +3,5 @@ title: "home MV renders"
 description: "concept renders for HOME music video"
 date: "2023-06-13"
 type: "art"
-images: ["./home-render-1.jpeg", "./home-poster.jpeg", "./home-render-2.jpeg", "./home-render-3.jpeg", "./home-render-4.PNG"]
+images: ["./home-render-1.jpeg", "./home-poster.jpeg", "./home-render-2.jpeg", "./home-render-3.jpeg", "./home-render-4.png"]
 ---
