fix: normalize image extensions to lowercase

--- a/src/content/artwork/think-back/index.mdx
+++ b/src/content/artwork/think-back/index.mdx
@@ -3,6 +3,6 @@ title: "think back"
 description: "xxsquidwardxx 9/11 fanart"
 date: "2024-09-11"
 type: "art"
-images: ["./think-back.GIF"]
+images: ["./think-back.gif"]
 ---
 
