update ui and layout

--- a/src/content/projects/dotfiles/index.mdx
+++ b/src/content/projects/dotfiles/index.mdx
@@ -1,8 +1,10 @@
 ---
 title: 'Dotfiles'
-description: 'My minimalist approach to macOS configuration using dotfiles and shell scripts'
+description: 'aka my adventure in configuration management'
 date: 'Mar 18 2024'
-repoURL: 'https://github.com/fractalcounty/dotfiles'
+links:
+  - label: 'repo'
+    url: 'https://github.com/fractalcounty/dotfiles'
 showInBlog: false
 blogTitle: 'Dotfiles'
 type: 'project'
@@ -14,8 +16,6 @@ tags:
 ---
 
 ![Dotfiles Preview](./chips-dotfiles-preview.webp)
-
-_aka my adventure in configuration management_
 
 ## The problem
 
