--- a/src/content/projects/smpearth/index.mdx
+++ b/src/content/projects/smpearth/index.mdx
@@ -1,8 +1,8 @@
 ---
 title: 'SMPEarth'
-description: 'A spiritual successor to the SMPLive Minecraft server, set on a scale map of Earth'
+description: 'A spiritual successor to the SMPLive Minecraft server'
 date: 'Nov 22 2019'
-projectURLs:
+links:
   - label: 'wiki'
     url: 'https://smpearth.fandom.com/wiki/SMPEarth'
   - label: 'map download'
