improved image handling

--- a/src/content/artwork/think-back/index.mdx
+++ b/src/content/artwork/think-back/index.mdx
@@ -3,6 +3,7 @@ title: "think back"
 description: "xxsquidwardxx 9/11 fanart"
 date: "2024-09-11"
 type: "art"
-images: ["./think-back.gif"]
+images: ["./think-back.webp"]
+thumbnail: "./think-back-thumb.webp"
 ---
 
