added smpearth map downloads

--- a/src/content/projects/smpearth/index.mdx
+++ b/src/content/projects/smpearth/index.mdx
@@ -5,15 +5,21 @@ date: 'Nov 22 2019'
 links:
   - label: 'wiki'
     url: 'https://smpearth.fandom.com/wiki/SMPEarth'
-  - label: 'map download'
+  - label: 'map download (empty)'
+    url: 'https://www.mediafire.com/file/7t3eik28arzatj1/smpe-map.zip/file'
+  - label: 'map download (no builds)'
     url: 'https://www.mediafire.com/file/2trxtxkhqicke1s/smpe-private-map.zip/file'
 showInBlog: true
 blogTitle: 'The Genesis of SMPEarth'
 type: 'project'
 thumbnail: 'solar:earth-linear'
 tags:
-  - minecraft
   - smpearth
+  - map
+  - download
+  - smpearth-map
+  - map-download
+  - minecraft
   - smplive
   - intcraft
   - dreamsmp
